--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                         <img src="img/img_2.jpg" alt="">
                         <h2>$1,400,000</h2>
                         <hr>
-                        <p class="my-3">5232 California Fake, Ave. 21BC</p>
-                        <h3>California, USA</h3>
+                        <p class="my-3">580 paris Fake, Ave. 21BC</p>
+                        <h3>Paris, France</h3>
                         <div class="house-icons d-flex justify-content-center my-3">
                             <p class="mx-5"><i class='bx bxs-bed mx-1'></i> 2 Beds</p>
-                            <p><i class='bx bxs-bath mx-1'></i> 2 Bathrooms</p>
+                            <p><i class='bx bxs-bath mx-1'></i> 1 Bathrooms</p>
                         </div>
                         <button class="btn my-3">See details</button>
                     </div>
@@ -138,10 +138,10 @@
                         <img src="img/img_3.jpg" alt="">
                         <h2>$1,821,000</h2>
                         <hr>
-                        <p class="my-3">5232 California Fake, Ave. 21BC</p>
-                        <h3>California, USA</h3>
+                        <p class="my-3">72 madrid, Ave. 21BC</p>
+                        <h3>Madrid, Spain</h3>
                         <div class="house-icons d-flex justify-content-center my-3">
-                            <p class="mx-5"><i class='bx bxs-bed mx-1'></i> 2 Beds</p>
+                            <p class="mx-5"><i class='bx bxs-bed mx-1'></i> 3 Beds</p>
                             <p><i class='bx bxs-bath mx-1'></i> 2 Bathrooms</p>
                         </div>
                         <button class="btn my-3">See details</button>
